# uzume_vocoder

./: .gitignore  CMakeLists.txt  GaussianNoiseGenerator.cpp  ImpulseResponse.cpp  LICENSE  README.md  Spectrogram.cpp  Spectrum.cpp  SynthesizeImpulseResponse.cpp  SynthesizeImpulseResponse.hpp  SynthesizePhrase.cpp  fft.cpp  main.cpp.sample  sample.cpp
dsp/: GaussianNoiseGenerator.cpp  ImpulseResponse.cpp  ImpulseResponse.hpp  Spectrogram.hpp  SynthesizeImpulseResponse.cpp  fft.cpp  fft.hpp  fft_util.cpp  fft_util.hpp
include/: GaussianNoiseGenerator.hpp  Spectrum.hpp  SynthesizeImpulseResponse.hpp  SynthesizePhrase.hpp
sample/: CMakeLists.txt  main.cpp
src/: AnalyzeAperiodicity.hpp  AnalyzeAperiodicityWithD4C.cpp  AnalyzeAperiodicityWithD4C.hpp  AnalyzePeriodicity.hpp  AnalyzePeriodicityWithCheapTrick.cpp  AnalyzePeriodicityWithCheapTrick.hpp  CMakeLists.txt  Contour.cpp  Contour.hpp  EstimateF0.hpp  EstimateF0WithDIO.cpp  EstimateF0WithDIO.hpp  GaussianNoiseGenerator.cpp  GaussianNoiseGenerator.hpp  ImpulseResponse.hpp  InstantWaveform.cpp  InstantWaveform.hpp  NaiveSpectrogram.cpp  NaiveSpectrogram.hpp  Spectrogram.cpp  Spectrogram.hpp  Spectrum.cpp  Spectrum.hpp  SynthesizeImpulseResponse.cpp  SynthesizeImpulseResponse.hpp  SynthesizeImpulseResponseWithWORLD.cpp  SynthesizeImpulseResponseWithWORLD.hpp  SynthesizePhrase.cpp  SynthesizePhrase.hpp  SynthesizePhraseWithWORLD.cpp  SynthesizePhraseWithWORLD.hpp  SynthesizeSegment.cpp  SynthesizeSegment.hpp  SynthesizeWaveform.hpp  TimeAxisMap.hpp  Waveform.cpp  Waveform.hpp  WaveformSpectrogram.cpp  WaveformSpectrogram.hpp  audioio.h  (+6 more)
src/data/: Contour.cpp  Contour.hpp  ControlChange.cpp  ControlChange.hpp  ImpulseResponse.cpp  ImpulseResponse.hpp  InstantWaveform.cpp  InstantWaveform.hpp  LinearTimeAxisMap.cpp  LinearTimeAxisMap.hpp  Spectrum.cpp  Spectrum.hpp  Waveform.cpp  Waveform.hpp
src/spectrogram/: ArraySpectrogramAggregator.cpp  ArraySpectrogramAggregator.hpp  DefaultAnalysis.cpp  DefaultAnalysis.hpp  F0EditedSpectrogram.cpp  F0EditedSpectrogram.hpp  GenEditedSpectrogram.cpp  GenEditedSpectrogram.hpp  NaiveSpectrogram.cpp  NaiveSpectrogram.hpp  StretchedPartialSpectrogram.cpp  StretchedPartialSpectrogram.hpp  WaveformSpectrogram.cpp  WaveformSpectrogram.hpp
src/world/: AnalyzeAperiodicityWithD4C.cpp  AnalyzeAperiodicityWithD4C.hpp  AnalyzePeriodicityWithCheapTrick.cpp  AnalyzePeriodicityWithCheapTrick.hpp  EstimateF0WithDIO.cpp  EstimateF0WithDIO.hpp  GaussianNoiseGenerator.cpp  GaussianNoiseGenerator.hpp  SynthesizeImpulseResponseWithWORLD.cpp  SynthesizeImpulseResponseWithWORLD.hpp  SynthesizePhraseWithWORLD.cpp  SynthesizePhraseWithWORLD.hpp  SynthesizeSegmentWithWORLD.cpp  SynthesizeSegmentWithWORLD.hpp  SynthesizeWaveformWithWORLD.cpp  SynthesizeWaveformWithWORLD.hpp  audioio.cpp  constant.cpp  constant.hpp  fft.cpp  fft.hpp  util.cpp  util.hpp
test/: CMakeLists.txt  MockSpectrogram.hpp  MockTimeAxisMap.hpp  WaveformSpectrogramTest.cpp  no_test.cpp
test/data/: ControlChangeTest.cpp  LinearTimeAxisMapTest.cpp  WaveformTest.cpp
test/spectrogram/: ArraySpectrogramAggregatorTest.cpp  GenEditedSpectrogramTest.cpp  StretchedPartialSpectrogramTest.cpp  WaveformSpectrogramTest.cpp
